--- a/Safari Zoom Mode Toggle.workflow/Contents/Info.plist
+++ b/Safari Zoom Mode Toggle.workflow/Contents/Info.plist
@@ -15,6 +15,6 @@
 		</dict>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string></string>
+	<string>matatk.SafariZoomModeToggle</string>
 </dict>
 </plist>
